# leptos_wgpu_integration

./: Cargo.toml  README.md  index.html
public/: styles.scss
src/: lib.rs  main.rs
src/components/: mod.rs  window.rs
src/components/types/: mod.rs  state.rs
src/pages/: home.rs
src/utils/: mod.rs  state.rs
src/utils/graphics/: mod.rs  state.rs
src/utils/graphics/shaders/: hardcoded_triangle.wgsl  interstage.wgsl  storage.wgsl  uniform.wgsl  vertex_index_buffer.wgsl
src/utils/graphics/types/: keycode.rs
src/utils/graphics/types/buffers/: mod.rs
src/utils/helpers/: callbacks.rs
src/utils/shaders/: buffer_shader.wgsl  camera_shader.wgsl  triangle_shader.wgsl
src/utils/types/: keycode.rs  mod.rs  size.rs  state.rs
src/utils/types/buffers/: mod.rs  polygon_buffer.rs  polygon_vertex.rs
src/utils/types/camera/: camera.rs  camera_controller.rs  camera_uniform.rs  mod.rs
src/utils/types/shaders/: compute_shader.wgsl  shader.wgsl  shader_2.wgsl
