[package]
name = "leptos_wgpu_integration"
version = "0.1.0"
edition = "2021"
authors = [
    "Aarnav Srivastava <70161949+AarnavSrivastava@users.noreply.github.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.50"
wgpu = "25.0.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
